[package]
name = "matroska"
description = "Library for parsing Matroska (MKV) file metadata."
keywords = ["matroska", "mkv"]
version = "0.27.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/matroska/"
homepage = "https://github.com/tuffy/matroska"
repository = "https://github.com/tuffy/matroska"
edition = "2018"

[dependencies]
bitstream-io = "2.4"
phf = { version = "0.11", features = ["macros"] }
time = { version = "0.3", features = ["macros"], optional = true }
chrono = { version = "0.4", optional = true }
jiff = { version = "0.1", optional = true }
